# GM

./: Makefile  pyproject.toml
src/gm/: app.py  cli.py
src/gm/cli/: MW3.py  __init__.py  backup.py  mw3.py
src/gm/constants/: __init__.py  data.py  github.py
src/gm/data/: __init__.py  backup.py  base.py  games.py
src/gm/data/interfaces/: backup.py  games.py
src/gm/logs/: common.py
src/gm/schemas/: MW3.py  __init__.py
src/gm/services/: MW3.py  backup.py  mw3.py
src/gm/services/interfaces/: backup.py  cod.py
src/gm/utils/: MW3.py  __init__.py
