[project]
name = "gm"
version = "0.1.0"
description = "Game master, a tool that helps you keep track of your alt playthroughs in your favorite video games."
readme = "README.md"
authors = [
    { name = "Evanlab02", email = "evanlabuschagne70@gmail.com" }
]
requires-python = ">=3.13"
dependencies = [
    "typer==0.12.5",
]

[tool.uv]
dev-dependencies = [
    "black==24.10.0",
    "coverage==7.6.4",
    "flake8-docstrings==1.7.0",
    "flake8==7.1.1",
    "isort==5.13.2",
    "mypy==1.12.1",
    "pydocstyle==6.3.0",
    "pytest-cov==5.0.0",
    "pytest-mock==3.14.0",
    "pytest-sugar==1.0.0",
    "pytest-xdist==3.6.1",
    "pytest==8.3.3",
    "watchfiles==0.24.0",
]

[project.scripts]
gm = "gm.app:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
